# FoXy

./: .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE.bsd-2.md  LICENSE.bsd-3.md  LICENSE.mit.md  README.md  fobos  ford.html  fpm.toml  hashmap.json  index.html  params.json  search.html
api/: index.html
assets/: api_index.md.BALpl2Jk.js  api_index.md.BALpl2Jk.lean.js  api_src_lib_foxy.md.BZbXk2h4.js  api_src_lib_foxy_xml_file.md.C0C7jifj.js  api_src_lib_foxy_xml_file.md.C0C7jifj.lean.js  api_src_lib_foxy_xml_tag.md.CtTs4QGd.js  api_src_lib_foxy_xml_tag.md.CtTs4QGd.lean.js  app.Dm9WvO2N.js  ford.md.DFZia9nI.js  guide_api-reference.md.DrVOz_31.js  guide_api-reference.md.DrVOz_31.lean.js  guide_changelog.md.DX9xULgh.js  guide_changelog.md.DX9xULgh.lean.js  guide_contributing.md.DxrFmh9K.js  guide_contributing.md.DxrFmh9K.lean.js  guide_coverage-analysis.md.fJ6jG74N.js  guide_coverage-analysis.md.fJ6jG74N.lean.js  guide_features.md.BBLAMdWx.js  guide_features.md.BBLAMdWx.lean.js  guide_foxy_test_add_attributes.f90.gcov.md.DmcSgZph.js  guide_foxy_test_add_attributes.f90.gcov.md.DmcSgZph.lean.js  guide_index.md.DQXANDno.js  guide_usage.md.BgeKa-vP.js  (+7 more)
src/tests/: CMakeLists.txt  add_attributes.f90  add_tag.f90  create_tag.f90  delete_attributes.f90  delete_content.f90  foxy_test_create_tag.f90  foxy_test_delete_attributes.f90  foxy_test_delete_content.f90  foxy_test_delete_tag.f90  foxy_test_parse_file_simple.f90  foxy_test_parse_string_simple.f90  foxy_test_write_tag.f90  fx_test1.f90  parse_string_nested_tags.f90  test.xml
(+881 files in other folders)
